nsk/jdb/unwatch/unwatch001 crash in InstanceKlass::methods_do(void (*)(Method*))

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P2
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b17
    • Not verified

      RULE nsk/jdb/unwatch/unwatch001 Crash SIGSEGV

      Aurora run:
      http://aurora.ru.oracle.com/functional/faces/RunDetails.xhtml?names=476311.VMSQE.PIT-1279&show-limit=0&filter=

      hs_err:
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # SIGSEGV (0xb) at pc=0xf6a2a222, pid=31229, tid=2768759664
      #
      # JRE version: Java(TM) SE Runtime Environment (9.0-b11) (build 1.9.0-internal-fastdebug-201405021658.amurillo.jdk9-hs-2014-05-02-b11)
      # Java VM: Java HotSpot(TM) Server VM (1.9.0-internal-fastdebug-201405021658.amurillo.jdk9-hs-2014-05-02-b11-fastdebug mixed mode linux-x86 )
      # Problematic frame:
      # V [libjvm.so+0x7b5222] InstanceKlass::methods_do(void (*)(Method*))+0x12
      #
      # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
      #
      # If you would like to submit a bug report, please visit:
      # http://bugreport.sun.com/bugreport/crash.jsp
      #

      --------------- T H R E A D ---------------

      Current thread (0x9e128400): JavaThread "event-handler" [_thread_in_vm, id=31638, stack(0xa502e000,0xa507f000)]

      siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x00000000

      Registers:
      EAX=0x00000000, EBX=0xf72b9394, ECX=0xf6aa6890, EDX=0xa1af26a8
      ESP=0xa507d740, EBP=0xa507d758, ESI=0xa1af26a8, EDI=0xf61399a0
      EIP=0xf6a2a222, EFLAGS=0x00010282, CR2=0x00000000

      Top of Stack: (sp=0xa507d740)
      0xa507d740: 9e123740 9ec00588 a507d768 f72b9394
      0xa507d750: a1af26a8 f61399a0 a507d798 f6793359
      0xa507d760: a1af26a8 f6aa6890 f719ab01 f719ab01
      0xa507d770: 00001000 00000000 f710e291 f70d9470
      0xa507d780: f70d96d6 f70d96ba 01011000 f72b9394
      0xa507d790: 9ec00588 00000000 a507d838 f6aa60e5
      0xa507d7a0: f6aa6890 00000004 f72a16a8 f72a16a8
      0xa507d7b0: 4cf03f76 f6114e1b f6114e1c f6c51a0a

      Instructions: (pc=0xf6a2a222)
      0xf6a2a202: 97 e8 00 00 00 8b 02 eb 90 90 8d 74 26 00 55 89
      0xf6a2a212: e5 57 56 53 83 ec 0c 8b 55 08 8b 82 e8 00 00 00
      0xf6a2a222: 8b 38 85 ff 7e 6a 31 f6 eb 1c 8d 74 26 00 83 ec
      0xf6a2a232: 0c 46 53 ff 55 0c 83 c4 10 39 fe 7d 53 8b 55 08

      Register to memory mapping:

      EAX=0x00000000 is an unknown value
      EBX=0xf72b9394: <offset 0x1044394> in /scratch/local/aurora/CommonData/jdk/jre/lib/i386/server/libjvm.so at 0xf6275000
      ECX=0xf6aa6890: <offset 0x831890> in /scratch/local/aurora/CommonData/jdk/jre/lib/i386/server/libjvm.so at 0xf6275000
      EDX=0xa1af26a8 is pointing into metadata
      ESP=0xa507d740 is pointing into the stack for thread: 0x9e128400
      EBP=0xa507d758 is pointing into the stack for thread: 0x9e128400
      ESI=0xa1af26a8 is pointing into metadata
      EDI=0xf61399a0 is an unknown value


      Stack: [0xa502e000,0xa507f000], sp=0xa507d740, free space=317k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x7b5222] InstanceKlass::methods_do(void (*)(Method*))+0x12
      V [libjvm.so+0x51e359] ClassLoaderDataGraph::methods_do(void (*)(Method*))+0x129
      V [libjvm.so+0x8310e5] print_method_profiling_data()+0x175
      V [libjvm.so+0x833129] print_statistics()+0x159
      V [libjvm.so+0x833941] before_exit(JavaThread*)+0x191
      V [libjvm.so+0x941705] JVM_Halt+0xc5
      C [libjava.so+0xdb4d] Java_java_lang_Shutdown_halt0+0x1d
      j java.lang.Shutdown.halt0(I)V+0
      j java.lang.Shutdown.halt(I)V+7
      j java.lang.Shutdown.exit(I)V+99
      j java.lang.Runtime.exit(I)V+14
      j java.lang.System.exit(I)V+4
      j com.sun.tools.example.debug.tty.Env.shutdown(Ljava/lang/String;)V+28
      j com.sun.tools.example.debug.tty.EventHandler.handleExitEvent(Lcom/sun/jdi/event/Event;)Z+47
      j com.sun.tools.example.debug.tty.EventHandler.handleEvent(Lcom/sun/jdi/event/Event;)Z+155
      j com.sun.tools.example.debug.tty.EventHandler.run()V+52
      j java.lang.Thread.run()V+11
      v ~StubRoutines::call_stub
      V [libjvm.so+0x83983d] JavaCalls::call_helper(JavaValue*, methodHandle*, JavaCallArguments*, Thread*)+0x17bd
      V [libjvm.so+0xbb35e9] os::os_exception_wrapper(void (*)(JavaValue*, methodHandle*, JavaCallArguments*, Thread*), JavaValue*, methodHandle*, JavaCallArguments*, Thread*)+0x19
      V [libjvm.so+0x83bd90] JavaCalls::call_virtual(JavaValue*, KlassHandle, Symbol*, Symbol*, JavaCallArguments*, Thread*)+0x650
      V [libjvm.so+0x83c775] JavaCalls::call_virtual(JavaValue*, Handle, KlassHandle, Symbol*, Symbol*, Thread*)+0x95
      V [libjvm.so+0x919bf1] thread_entry(JavaThread*, Thread*)+0xc1
      V [libjvm.so+0xd7fd84] JavaThread::thread_main_inner()+0x234
      V [libjvm.so+0xd80124] JavaThread::run()+0x2e4
      V [libjvm.so+0xbbc289] java_start(Thread*)+0x119
      C [libpthread.so.0+0x6a49]
      C [libc.so.6+0xe2aee] clone+0x5e

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      j java.lang.Shutdown.halt0(I)V+0
      j java.lang.Shutdown.halt(I)V+7
      j java.lang.Shutdown.exit(I)V+99
      j java.lang.Runtime.exit(I)V+14
      j java.lang.System.exit(I)V+4
      j com.sun.tools.example.debug.tty.Env.shutdown(Ljava/lang/String;)V+28
      j com.sun.tools.example.debug.tty.EventHandler.handleExitEvent(Lcom/sun/jdi/event/Event;)Z+47
      j com.sun.tools.example.debug.tty.EventHandler.handleEvent(Lcom/sun/jdi/event/Event;)Z+155
      j com.sun.tools.example.debug.tty.EventHandler.run()V+52
      j java.lang.Thread.run()V+11
      v ~StubRoutines::call_stub

      --------------- P R O C E S S ---------------

      Java Threads: ( => current thread )
      =>0x9e128400 JavaThread "event-handler" [_thread_in_vm, id=31638, stack(0xa502e000,0xa507f000)]
        0x9e7a3400 JavaThread "process reaper" daemon [_thread_blocked, id=31511, stack(0xa6210000,0xa622e000)]
        0xa0da5400 JavaThread "Service Thread" daemon [_thread_blocked, id=31360, stack(0xa5e2e000,0xa5e7f000)]
        0xa0d8fc00 JavaThread "C1 CompilerThread14" daemon [_thread_blocked, id=31358, stack(0x9ed7f000,0x9ee00000)]
        0xa0d8e000 JavaThread "C1 CompilerThread13" daemon [_thread_blocked, id=31357, stack(0x9ef7f000,0x9f000000)]
        0xa0d8c000 JavaThread "C1 CompilerThread12" daemon [_thread_blocked, id=31356, stack(0x9f17f000,0x9f200000)]
        0xa0d8a000 JavaThread "C1 CompilerThread11" daemon [_thread_blocked, id=31355, stack(0x9f37f000,0x9f400000)]
        0xa0d88400 JavaThread "C1 CompilerThread10" daemon [_thread_blocked, id=31354, stack(0x9f57f000,0x9f600000)]
        0xa0d86400 JavaThread "C2 CompilerThread9" daemon [_thread_blocked, id=31353, stack(0x9f77f000,0x9f800000)]
        0xa0d84400 JavaThread "C2 CompilerThread8" daemon [_thread_blocked, id=31352, stack(0x9f97f000,0x9fa00000)]
        0xa0d82800 JavaThread "C2 CompilerThread7" daemon [_thread_blocked, id=31351, stack(0x9fb7f000,0x9fc00000)]
        0xa0d80800 JavaThread "C2 CompilerThread6" daemon [_thread_blocked, id=31350, stack(0x9fd7f000,0x9fe00000)]
        0xa0d7e800 JavaThread "C2 CompilerThread5" daemon [_thread_blocked, id=31349, stack(0x9ff7f000,0xa0000000)]
        0xa0d7cc00 JavaThread "C2 CompilerThread4" daemon [_thread_blocked, id=31348, stack(0xa017f000,0xa0200000)]
        0xa0d7ac00 JavaThread "C2 CompilerThread3" daemon [_thread_blocked, id=31347, stack(0xa037f000,0xa0400000)]
        0xa0d79000 JavaThread "C2 CompilerThread2" daemon [_thread_blocked, id=31346, stack(0xa057f000,0xa0600000)]
        0xa0d76c00 JavaThread "C2 CompilerThread1" daemon [_thread_blocked, id=31345, stack(0xa077f000,0xa0800000)]
        0xa0d74c00 JavaThread "C2 CompilerThread0" daemon [_thread_blocked, id=31344, stack(0xa0a7f000,0xa0b00000)]
        0xa0d47c00 JavaThread "Finalizer" daemon [_thread_blocked, id=31308, stack(0xa622e000,0xa627f000)]
        0xa0d43c00 JavaThread "Reference Handler" daemon [_thread_blocked, id=31303, stack(0xa6606000,0xa6657000)]
        0xf6108400 JavaThread "main" [_thread_in_native, id=31235, stack(0xf7772000,0xf77c3000)]

      Other Threads:
        0xa0d38400 VMThread [stack: 0xa140e000,0xa148f000] [id=31300]

      VM state:not at safepoint (normal execution)

      VM Mutex/Monitor currently owned by a thread: None

            Assignee:
            Coleen Phillimore
            Reporter:
            Mattias Tobiasson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: